--- a/pipelines/institution_id/config-TEMPLATE.toml
+++ b/pipelines/institution_id/config-TEMPLATE.toml
@@ -25,6 +25,7 @@ min_passing_grade = 1.0
 min_num_credits_full_time = 12
 # NOTE: single quotes *required* here; it's TOML syntax for literal strings
 course_level_pattern = 'asdf'
+core_terms = ["FALL", "SPRING"]
 key_course_subject_areas = ["24", "51"]
 key_course_ids = ["ENGL101", "MATH101"]
 
