--- a/src/student_success_tool/assets/pdp/features_table.toml
+++ b/src/student_success_tool/assets/pdp/features_table.toml
@@ -16,8 +16,8 @@ section_num_students_enrolled_mean = { name = "avg. number of students enrolled 
 section_num_students_enrolled_std = { name = "std. dev. in number of students enrolled per section this term" }
 num_courses_core_course_y = { name = "number of core courses taken this term" }
 num_courses_enrolled_at_other_institution_s_y = { name = "number of courses taken this term while enrolled at another institution" }
-# "num_courses_course_subject_area_*" = { name = "TODO: number of courses taken in subject area this term" }
-# "num_courses_course_id_*" = { name = "TODO: number of times this course taken this term" }
+'num_courses_course_subject_area_(\d+)' = { name = "number of courses taken in subject area {} this term" }
+'num_courses_course_id_(.*)' = { name = "number of times course '{}' taken this term" }
 num_courses_course_type_cu = { name = "number of college-level, undergraduate courses taken this term" }
 num_courses_course_type_cg = { name = "number of college-level, graduate courses taken this term" }
 num_courses_course_type_cc = { name = "number of college developmental, remedial, or preparatory courses taken this term" }
@@ -105,8 +105,8 @@ frac_courses_passed = { name = "fraction of courses passed this term" }
 frac_courses_completed = { name = "fraction of courses completed this term" }
 frac_courses_core_course_y = { name = "fraction of core courses taken this term" }
 frac_courses_enrolled_at_other_institution_s_y = { name = "fraction of courses taken this term while student enrolled at another institution" }
-# "frac_courses_course_subject_area_*" = { name = "TODO: fraction of courses taken in subject area this term" }
-# "frac_courses_course_id_*" = { name = "TODO: fraction of times this course taken this term" }
+'frac_courses_course_subject_area_(\d+)' = { name = "fraction of courses taken in subject area {} this term" }
+'frac_courses_course_id_(.*)' = { name = "fraction of times course '{}' taken this term" }
 frac_courses_course_type_cu = { name = "fraction of college-level, undergraduate courses taken this term" }
 frac_courses_course_type_cg = { name = "fraction of college-level, graduate courses taken this term" }
 frac_courses_course_type_cc = { name = "fraction of college developmental, remedial, or preparatory courses taken this term" }
@@ -187,8 +187,8 @@ num_courses_passed_cumfrac = { name = "fraction of courses passed so far" }
 num_courses_completed_cumfrac = { name = "fraction of courses completed so far" }
 num_courses_core_course_y_cumfrac = { name = "fraction of core courses taken so far" }
 num_courses_enrolled_at_other_institution_s_y_cumfrac = { name = "fraction of courses taken so far while student enrolled at another institution" }
-# "num_courses_course_subject_area_*_cumfrac" = { name = "TODO: fraction of courses taken in subject area so far" }
-# "num_courses_course_id_*_cumfrac" = { name = "TODO: fraction of times this course taken so far" }
+'num_courses_course_subject_area_(\d+)_cumfrac' = { name = "fraction of courses taken in subject area {} so far" }
+'num_courses_course_id_(.*)_cumfrac' = { name = "fraction of times course '{}' taken so far" }
 num_courses_course_type_cu_cumfrac = { name = "fraction of college-level, undergraduate courses taken so far" }
 num_courses_course_type_cg_cumfrac = { name = "fraction of college-level, graduate courses taken so far" }
 num_courses_course_type_cc_cumfrac = { name = "fraction of college developmental, remedial, or preparatory courses taken so far" }
