--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -11,14 +11,20 @@ jobs:
     permissions:
       pull-requests: read
     steps:
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v45
-        with:
-          files: |
-            CHANGELOG.md
+      # changed-files action is currently compromised! disabling to avoid security vuln
+      # - name: Get changed files
+      #   id: changed-files
+      #   uses: tj-actions/changed-files@v45
+      #   with:
+      #     files: |
+      #       CHANGELOG.md
+      # - name: Ensure changelog updated
+      #   if: steps.changed-files.outputs.any_changed == 'false'
+      #   run: |
+      #     echo "CHANGELOG.md file must be updated with release notes"
+      #     exit 1
+      # temporarily skipping this check
       - name: Ensure changelog updated
-        if: steps.changed-files.outputs.any_changed == 'false'
         run: |
-          echo "CHANGELOG.md file must be updated with release notes"
-          exit 1
+          echo "CHANGELOG.md file must be updated with release notes!"
+          exit 0
