--- a/.github/actions/setup-python-env/action.yml
+++ b/.github/actions/setup-python-env/action.yml
@@ -13,9 +13,9 @@ runs:
       with:
         python-version: ${{ inputs.python-version }}
     - name: Install uv
-      uses: astral-sh/setup-uv@v5
+      uses: astral-sh/setup-uv@v5.3.1
       with:
-        version: "latest"
+        version: "0.6.6"
         enable-cache: true
         cache-dependency-glob: "uv.lock"
     - name: Install project and dependencies
