--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -13,25 +13,18 @@ jobs:
         uses: ./.github/actions/setup-python-env
         with:
           python-version: "3.10"
-      # changed-files action is currently compromised! disabling to avoid security vuln
-      # - name: Get changed files
-      #   id: changed-files
-      #   uses: tj-actions/changed-files@v45
-      #   with:
-      #     files: |
-      #       **.py
-      #       **.ipynb
-      # - name: Run linter
-      #   if: steps.changed-files.outputs.any_changed == 'true'
-      #   run: |
-      #     uv tool run ruff check --diff ${{ steps.changed-files.outputs.all_changed_files }}
-      # - name: Run formatter
-      #   if: steps.changed-files.outputs.any_changed == 'true'
-      #   run: |
-      #     uv tool run ruff format --diff ${{ steps.changed-files.outputs.all_changed_files }}
+      - name: Get changed files
+        id: changed-files
+        uses: step-security/changed-files@v45.0.1
+        with:
+          files: |
+            **.py
+            **.ipynb
       - name: Run linter
+        if: steps.changed-files.outputs.any_changed == 'true'
         run: |
-          uv tool run ruff check --diff src/
+          uv tool run ruff check --diff ${{ steps.changed-files.outputs.all_changed_files }}
       - name: Run formatter
+        if: steps.changed-files.outputs.any_changed == 'true'
         run: |
-          uv tool run ruff format --diff src/
+          uv tool run ruff format --diff ${{ steps.changed-files.outputs.all_changed_files }}
