--- a/pipelines/inference/pdp_inference/workflow_asset_bundle/resources/github_sourced_pdp_inference_pipeline.yml
+++ b/pipelines/inference/pdp_inference/workflow_asset_bundle/resources/github_sourced_pdp_inference_pipeline.yml
@@ -52,33 +52,33 @@ resources:
           libraries:
             - pypi:
                 package: git+https://github.com/datakind/student-success-tool.git@${var.pip_install_branch}
-        - task_key: data_validation
-          depends_on:
-            - task_key: data_preprocessing
-          spark_python_task:
-            python_file: pipelines/tasks/pdp_data_validation/pdp_data_validation.py
-            source: GIT
-          job_cluster_key: pdp-inference-pipeline-cluster
         # - task_key: data_validation
         #   depends_on:
         #     - task_key: data_preprocessing
         #   spark_python_task:
-        #     python_file: /Workspace/Users/pedro.melendez@datakind.org/python-refactor-pipeline/pipelines/tasks/data_validation/data_validation_task.py
+        #     python_file: pipelines/tasks/pdp_data_validation/pdp_data_validation.py
         #     source: GIT
-        #     parameters:
-        #       - --input_table_path
-        #       - "{{tasks.data_preprocessing.values.processed_dataset_path}}"
-        #       - --input_schema_path
-        #       - /Volumes/{{job.parameters.DB_workspace}}/{{job.parameters.databricks_institution_name}}_bronze/schema # TODO(samroon2): Update once finalized.
-        #       - --output_artifact_path
-        #       - "{{tasks.data_ingestion.values.job_root_dir}}"
-        #       - --environment
-        #       - SERVING
-        #       - "{{job.parameters.fail_on_anomalies}}"
         #   job_cluster_key: pdp-inference-pipeline-cluster
-        #   libraries:
-        #     - pypi:
-        #         package: tensorflow_data_validation==1.16.1
+        - task_key: data_validation
+          depends_on:
+            - task_key: data_preprocessing
+          spark_python_task:
+            python_file: pipelines/tasks/data_validation/data_validation_task.py
+            source: GIT
+            parameters:
+              - --input_table_path
+              - "{{tasks.data_preprocessing.values.processed_dataset_path}}"
+              - --input_schema_path
+              - /Volumes/{{job.parameters.DB_workspace}}/{{job.parameters.databricks_institution_name}}_gold/gold_volume/configuration_files/schema.pbtxt # TODO(samroon2): Update once finalized.
+              - --output_artifact_path
+              - "{{tasks.data_ingestion.values.job_root_dir}}"
+              - --environment
+              - SERVING
+              - "{{job.parameters.fail_on_anomalies}}"
+          job_cluster_key: pdp-inference-pipeline-cluster
+          libraries:
+            - pypi:
+                package: tensorflow_data_validation==1.16.1
         - task_key: inference
           depends_on:
             - task_key: data_validation
@@ -106,10 +106,30 @@ resources:
               - "{{job.parameters.notification_email}}"
               - --DK_CC_EMAIL
               - "{{job.parameters.DK_CC_EMAIL}}"
+              - --modeling_table_path
+              - "{{job.parameters.DB_workspace}}.{{job.parameters.databricks_institution_name}}_gold.modeling_table"
           job_cluster_key: pdp-inference-pipeline-cluster
           libraries:
             - pypi:
                 package: git+https://github.com/datakind/student-success-tool.git@${var.pip_install_branch}
+            - pypi:
+                package: mlflow==2.19.0
+            - pypi:
+                package: category-encoders==2.6.3
+            - pypi:
+                package: cloudpickle==2.2.1
+            - pypi:
+                package: databricks-automl-runtime==0.2.21
+            - pypi:
+                package: holidays==0.45
+            - pypi:
+                package: lz4==4.3.2
+            - pypi:
+                package: psutil==5.9.0
+            - pypi:
+                package: scikit-learn==1.3.0
+            - pypi:
+                package: pandas==1.5.3
         - task_key: output_publish
           depends_on:
             - task_key: inference
@@ -144,7 +164,7 @@ resources:
               google_service_account: ${var.pipeline_sa_email}
               availability: ON_DEMAND_GCP
               zone_id: HA
-            node_type_id: n2-standard-8
+            node_type_id: n2-standard-16
             custom_tags:
               ResourceClass: SingleNode
               x-databricks-nextgen-cluster: "true"
@@ -170,7 +190,7 @@ resources:
         - name: db_run_id
           default: "{{job.run_id}}"
         - name: DB_workspace
-          default: dev_sst_02
+          default: ${var.DB_workspace}
         - name: gcp_bucket_name
           default: dev_6782b2f451f84c17ae6e14e918432b65
         - name: model_name
@@ -183,6 +203,8 @@ resources:
           default: "1"
         - name: DK_CC_EMAIL
           default: ${var.datakind_notification_email}
+        - name: fail_on_anomalies
+          default: --fail_on_anomalies_false
       permissions:
         - group_name: ${var.fellows_group_to_manage_workflow} 
           level: CAN_MANAGE
