--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ dependencies = [
     "shap~=0.46.0",
     "tomli~=2.0; python_version<'3.11'",
     "jsonpickle>=4.0.1",
+    "requests>=2.0.0",
+    "types-requests",
+    "types-paramiko"
 ]
 
 [project.urls]
