Changing workflow git source to develop branch

--- a/pipelines/inference/pdp_inference/workflow_asset_bundle/databricks.yml
+++ b/pipelines/inference/pdp_inference/workflow_asset_bundle/databricks.yml
@@ -6,6 +6,7 @@ bundle:
     
 include:
   - resources/github_sourced_pdp_inference_pipeline.yml
+  - resources/github_sourced_approval_pipeline.yml
 
 variables:
   DB_workspace:
