--- a/pipelines/institution_id/config-TEMPLATE.toml
+++ b/pipelines/institution_id/config-TEMPLATE.toml
@@ -1,7 +1,7 @@
 institution_id = "INST_ID"
 institution_name = "INST NAME"
 
-student_id_col = "student_guid"
+student_id_col = "student_id"
 target_col = "target"
 split_col = "split"
 sample_weight_col = "sample_weight"
@@ -11,10 +11,17 @@ pred_prob_col = "pred_prob"
 pos_label = true
 random_state = 12345
 
-[datasets.labeled]
+[datasets.ingested_YYYYMMDD]
 raw_course = { file_path = "/Volumes/CATALOG/INST_NAME_bronze/INST_NAME_bronze_file_volume/FILE_NAME_COURSE.csv" }
 raw_cohort = { file_path = "/Volumes/CATALOG/INST_NAME_bronze/INST_NAME_bronze_file_volume/FILE_NAME_COHORT.csv" }
-preprocessed = { table_path = "CATALOG.SCHEMA.TABLE_NAME" }
+preprocessed = { table_path = "CATALOG.INST_NAME_silver.DATASET_NAME_preprocessed" }
+# TODO: once PR #122 is merged
+# finalized = { table_path = "CATALOG.INST_NAME_gold.INST_ID_advisor_output_ETC_YYYYMMDD" }
+
+[models.TARGET_CHECKPOINT]
+experiment_id = "EXPERIMENT_ID"
+run_id = "RUN_ID"
+framework = "sklearn"
 
 [preprocessing]
 splits = { train = 0.6, test = 0.2, validate = 0.2 }
@@ -24,7 +31,7 @@ sample_class_weight = "balanced"
 min_passing_grade = 1.0
 min_num_credits_full_time = 12
 # NOTE: single quotes *required* here; it's TOML syntax for literal strings
-course_level_pattern = 'asdf'
+course_level_pattern = '^TODO(?P<course_level>\d)TODO$'
 core_terms = ["FALL", "SPRING"]
 key_course_subject_areas = ["24", "51"]
 key_course_ids = ["ENGL101", "MATH101"]
@@ -37,16 +44,13 @@ student_criteria = { enrollment_type = "FIRST-TIME", credential_type_sought_year
 incomplete_threshold = 0.5
 low_variance_threshold = 0.0
 collinear_threshold = 10.0
+# force_include_cols = []
 
 [modeling.training]
-# exclude_frameworks = ["xgboost", "lightgbm"]
 primary_metric = "log_loss"
 timeout_minutes = 10
-
-[models.graduation]
-experiment_id = "EXPERIMENT_ID"
-run_id = "RUN_ID"
-framework = "sklearn"
+# exclude_frameworks = ["xgboost", "lightgbm"]
+# exclude_cols = []
 
 [inference]
 num_top_features = 5
