[pdp] improve model evaluation code (#127)
* add (start of?) model eval config to schema

* improve datasets example cfg

* use new cfg field in train nb

* return fig from feat perm imp plot func

* compute feat perm imp separately from plot

* reorder/rename model eval plotting funcs

* add compute classif eval metrics func

* add more classification metrics to func

* add even more classification eval metrics

* docs: improve clf metrics docstring

* tests: fix evaluation tests for renamed func

--- a/pipelines/institution_id/config-TEMPLATE.toml
+++ b/pipelines/institution_id/config-TEMPLATE.toml
@@ -12,11 +12,12 @@ pos_label = true
 random_state = 12345
 
 [datasets.ingested_YYYYMMDD]
-raw_course = { file_path = "/Volumes/CATALOG/INST_NAME_bronze/INST_NAME_bronze_file_volume/FILE_NAME_COURSE.csv" }
-raw_cohort = { file_path = "/Volumes/CATALOG/INST_NAME_bronze/INST_NAME_bronze_file_volume/FILE_NAME_COHORT.csv" }
-preprocessed = { table_path = "CATALOG.INST_NAME_silver.DATASET_NAME_preprocessed" }
-# TODO: once PR #122 is merged
-# finalized = { table_path = "CATALOG.INST_NAME_gold.INST_ID_advisor_output_ETC_YYYYMMDD" }
+raw_course = { file_path = "/Volumes/CATALOG/INST_ID_bronze/INST_ID_bronze_file_volume/FILE_NAME_COURSE.csv" }
+raw_cohort = { file_path = "/Volumes/CATALOG/INST_ID_bronze/INST_ID_bronze_file_volume/FILE_NAME_COHORT.csv" }
+preprocessed = { table_path = "CATALOG.INST_ID_silver.DATASET_NAME_preprocessed" }
+# optionally, if you want to save predictions on their own
+# predictions = { table_path = "CATALOG.INST_ID_gold.DATASET_NAME_predictions" }
+finalized = { table_path = "CATALOG.INST_ID_gold.INST_ID_advisor_output_ETC_YYYYMMDD" }
 
 [models.TARGET_CHECKPOINT]
 experiment_id = "EXPERIMENT_ID"
@@ -51,6 +52,9 @@ primary_metric = "log_loss"
 timeout_minutes = 10
 # exclude_frameworks = ["xgboost", "lightgbm"]
 # exclude_cols = []
+
+[modeling.evaluation]
+topn_runs_included = 3
 
 [inference]
 num_top_features = 5
