--- a/pipelines/institution_id/config-TEMPLATE.toml
+++ b/pipelines/institution_id/config-TEMPLATE.toml
@@ -41,9 +41,12 @@ key_course_ids = ["ENGL101", "MATH101"]
 student_criteria = { enrollment_type = "FIRST-TIME", credential_type_sought_year_1 = "Bachelor's Degree" }
 intensity_time_limits = { FULL-TIME = [3.0, "year"], PART-TIME = [6.0, "year"] }
 
-[preprocessing.checkpoint.params]
-min_num_credits = 30.0
-num_credits_col = "num_credits_earned_cumsum"
+[preprocessing.checkpoint]
+name = "30_credits_ckpt"
+params = { min_num_credits = 30.0, num_credits_col = "num_credits_earned_cumsum" }
+
+[preprocessing.target]
+name = "graduation_150pct_time"
 
 [preprocessing.target.params]
 intensity_time_limits = { FULL-TIME = [3.0, "year"], PART-TIME = [6.0, "year"] }
