changing completion_pct to pct_completion for more clarity (and it looks better in a model name)

--- a/pipelines/institution_id/config-TEMPLATE.toml
+++ b/pipelines/institution_id/config-TEMPLATE.toml
@@ -48,7 +48,7 @@ value = 30
 
 [preprocessing.target]
 category = "graduation"
-unit = "completion_pct"
+unit = "pct_completion"
 value = 150
 params = { intensity_time_limits = { FULL-TIME = [3.0, "year"], PART-TIME = [6.0, "year"] } }
 
