--- a/pipelines/institution_id/config-TEMPLATE.toml
+++ b/pipelines/institution_id/config-TEMPLATE.toml
@@ -19,7 +19,7 @@ preprocessed = { table_path = "CATALOG.INST_ID_silver.DATASET_NAME_preprocessed"
 # predictions = { table_path = "CATALOG.INST_ID_gold.DATASET_NAME_predictions" }
 finalized = { table_path = "CATALOG.INST_ID_gold.INST_ID_advisor_output_ETC_YYYYMMDD" }
 
-[models.TARGET_CHECKPOINT]
+[model]
 experiment_id = "EXPERIMENT_ID"
 run_id = "RUN_ID"
 framework = "sklearn"
@@ -47,9 +47,11 @@ params = { min_num_credits = 30.0, num_credits_col = "num_credits_earned_cumsum"
 
 [preprocessing.target]
 name = "graduation_150pct_time"
-
-[preprocessing.target.params]
+type_ = "graduation"
 intensity_time_limits = { FULL-TIME = [3.0, "year"], PART-TIME = [6.0, "year"] }
+years_to_degree_col = "first_year_to_associates_at_cohort_inst"
+num_years_in_term = 4
+max_term_rank = "infer"
 
 [modeling.feature_selection]
 incomplete_threshold = 0.5
