--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "weasyprint~=60.2",
     "pydyf~=0.8.0",
     "markdown~=3.5",
+    "types-markdown~=3.8",
 ]
 
 [project.urls]
